tests/error/native_unsupported_struct.vbc
struct Point {
    int x;
};

int main() {
    struct Point p;
    p.x = 1;
    return p.x;
}
